Add backwards parameter to efficiently query past events
